--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,19 @@
     color: #fff;
   }
 }
+.cart {
+  li {
+    display: flex;
+    justify-content: space-between;
+    button {
+      background-color: #3f51b5;
+      color: #fff;
+      &:hover {
+        background-color: #dc3545 !important;
+      }
+    }
+  }
+}
 
 // footer
 
